Improve top menu

--- a/index.html
+++ b/index.html
@@ -43,19 +43,21 @@
         <div class='portfolio-menu flex-vertical' data-aos='fade-down' data-aos-anchor='#experience' data-aos-anchor-placement='top-top' data-aos-offset='-60'>
             <div class='menu-buttons flex-horizontal'>
                 <div class='name-container'>
-                    <p class='text-small'>A</p>
-                    <p class='text-small'>r</p>
-                    <p class='text-small'>n</p>
-                    <p class='text-small'>a</p>
-                    <p class='text-small'>v</p>
-                    <p class='text-small'> </p>
-                    <p class='text-small'>T</p>
-                    <p class='text-small'>h</p>
-                    <p class='text-small'>a</p>
-                    <p class='text-small'>r</p>
-                    <p class='text-small'>e</p>
-                    <p class='text-small'>j</p>
-                    <p class='text-small'>a</p>
+                    <a href='#'>
+                        <p class='text-small'>A</p>
+                        <p class='text-small'>r</p>
+                        <p class='text-small'>n</p>
+                        <p class='text-small'>a</p>
+                        <p class='text-small'>v</p>
+                        <p class='text-small'> </p>
+                        <p class='text-small'>T</p>
+                        <p class='text-small'>h</p>
+                        <p class='text-small'>a</p>
+                        <p class='text-small'>r</p>
+                        <p class='text-small'>e</p>
+                        <p class='text-small'>j</p>
+                        <p class='text-small'>a</p>
+                    </a>
                 </div>
                 <button type="button" id='Experience' class='menu selected' onclick='select("Experience")'><a href='#experience'><h2 class='title-xs'>Experience</h2></a></button>
                 <button type="button" id='Projects' class='menu' onclick='select("Projects")'><a href='#projects'><h2 class='title-xs'>Projects</h2></a></button>
