--- a/index.html
+++ b/index.html
@@ -194,15 +194,17 @@
                 <div class='title-container center'>
                     <h2 class='title-medium portfolio-title'>Coursework</h2>
                 </div>
-                <img src='assets/images/construction.gif'>
-                <p class='text-medium alt-color'>This section is under construction. The content you see will be improved in the future.</p>
                 <div class='section-container flex-vertical'>
                     <div class='experience card'>
                         <div class='experience description'>
-                            <h2 class='title-small'>Selected Coursework</h2>
+                            <h2 class='title-small'>Coursework</h2>
                             <ul>
-                                <li class='text-small'>Computer Programming I (CSE 142)</li>
-                                <li class='text-small'>Calculus I and II (MATH 124 and 125)</li>
+                                <li class='text-small'>Computer Programming I, II (CSE 142, 143)</li>
+                                <li class='text-small'>Foundations of Computing I (CSE 311)</li>
+                                <li class='text-small'>The Hardware/Software Interface (CSE 351)</li>
+                                <li class='text-small'>System and Software Tools (CSE 391)</li>
+                                <li class='text-small'>Matrix Algebra with Applications (MATH 308)</li>
+                                <li class='text-small'>Calculus I, II, III (MATH 124, 125, 126)</li>
                             </ul>
                         </div>
                     </div>
@@ -210,11 +212,9 @@
                         <div class='experience description'>
                             <h2 class='title-small'>Planned Coursework</h2>
                             <ul>
-                                <li class='text-small'>Computer Programming II (CSE 143)</li>
-                                <li class='text-small'>Foundations of Computing I and II (CSE 311 and 312)</li>
+                                <li class='text-small'>Foundations of Computing II (CSE 312)</li>
                                 <li class='text-small'>Data Structures and Parallelism (CSE 332)</li>
-                                <li class='text-small'>Calculus III (MATH 126)</li>
-                                <li class='text-small'>Matrix Algebra with Applications (MATH 308)</li>
+                                <li class='text-small'>Intro to Differential Equations (MATH 307)</li>
                             </ul>
                         </div>
                     </div>
@@ -225,8 +225,6 @@
                 <div class='title-container center'>
                     <h2 class='title-medium portfolio-title'>Resume</h2>
                 </div>
-                <img src='assets/images/construction.gif'>
-                <p class='text-medium alt-color'>This section is under construction. The content you see will be improved in the future.</p>
                 <div class="section-container flex-vertical">
                     <div class='experience card'>
                         <h2 class='text-medium'>Click <a target='_blank' href='Resume'>here</a> to open my resume in another tab.</h2>
