--- a/index.html
+++ b/index.html
@@ -74,6 +74,26 @@
                 <div class='section-container flex-vertical'>
                     <div class='experience card flex-horizontal' data-aos='fade'>
                         <div class='experience image-container center'>
+                            <img src='assets/images/husky-robotics-logo.png' class='experience image background'>
+                        </div>
+                        <div class='experience content flex-vertical'>
+                            <div class='experience title flex-vertical'>
+                                <p class='title-small'>Software Engineer, Autonomous Navigation Subteam</p>
+                                <p class='title-xs'>Husky Robotics (October 2020 - Present)</p>
+                            </div>
+                            <div class='experience description'>
+                                <ul>
+                                    <li class='text-small'>Created robot pathfinding and autonomous navigation algorithms for a prototype Mars rover using C++</li>
+                                    <li class='text-small'>Integrated ROS2 (Robot Operating System) into codebase using nodes and topics for navigation plan visualization</li>
+                                    <li class='text-small'>Defined and implemented a navigation algorithm to locate targets based on approximate GPS coordinates</li>
+                                    <li class='text-small'>Defined patterns for driving between two posts given approximate GPS coordinates of the center</li>
+                                    <li class='text-small'>Leveraged Docker for CI (continuous integration)</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class='experience card flex-horizontal' data-aos='fade'>
+                        <div class='experience image-container center'>
                             <img src='assets/images/mathnasium-logo.png' class='experience image'>
                         </div>
                         <div class='experience content flex-vertical'>
@@ -83,8 +103,8 @@
                             </div>
                             <div class='experience description'>
                                 <ul>
-                                    <li class='text-small'>Helped students in grades K-12 learn math and develop an intuitive understanding of it</li>
-                                    <li class='text-small'>Taught subjects ranging from basic addition and subtraction to calculus</li>
+                                    <li class='text-small'>Taught students grades K-12 topics in math up to calculus and helped develop an intuitive understanding of math concepts</li>
+                                    <li class='text-small'>Contributed to smooth operation of the center and interacted with parents and prospective customers</li>
                                 </ul>
                             </div>
                         </div>
@@ -100,9 +120,10 @@
                             </div>
                             <div class='experience description'>
                                 <ul>
-                                    <li class='text-small'>Led over 20 members to successful completion of a competition robot</li>
-                                    <li class='text-small'>Oversaw and was heavily involved in technical creation of the robot and accompanying software</li>
-                                    <li class='text-small'>Responsible for creating appropriate deadlines and ensuring the team met them successfully</li>
+                                    <li class='text-small'>Led and mentored a team of over 20 members to successful completion of a competition robot and accompanying software</li>
+                                    <li class='text-small'>Implemented a TensorFlow-based object detection model in Java to be integrated with robot navigation algorithms</li>
+                                    <li class='text-small'>Planned and led public events to introduce elementary and middle schoolers in Renton to STEM</li>
+                                    <li class='text-small'>Increased team efficiency and optimized the development process</li>
                                 </ul>
                             </div>
                         </div>
@@ -118,7 +139,7 @@
                             </div>
                             <div class='experience description'>
                                 <ul>
-                                    <li class='text-small'>Gave presentations about aviation history to Museum of Flight visitors</li>
+                                    <li class='text-small'>Gave presentations on aviation history to Museum of Flight visitors as the Museum's first Junior Docent</li>
                                     <li class='text-small'>Made interactive exhibits designed to teach young kids about topics in aviation</li>
                                 </ul>
                             </div>
