--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name='color-scheme' content='dark light'>
         
         <link rel='stylesheet' type="text/css" href='assets/stylesheets/build/main.css'>
-        <!-- https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css -->
+        <link rel='stylesheet' type="text/css" href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css'>
 
         <!-- Lato font -->
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
@@ -28,9 +28,9 @@
                 <h1 class='title-large'>Arnav Thareja</h1>
                 <p class='text-medium'>Hi! I am a freshman at the University of Washington studying Computer Science in the Paul G. Allen School of Computer Science & Engineering.</p>
                 <div class="icons">
-                    <a target="_blank" href="https://www.linkedin.com/in/arnavthareja/" class='center'><div class='icon center'><i class="fa fa-linkedin-square fa-2x"></i></div></a>
-                    <a target="_blank" href="https://github.com/arnavthareja/" class='center'><div class='icon center'><i class="fa fa-github fa-2x"></i></div></a>
-                    <a target="_blank" href="mailto:arnav.thareja25@gmail.com" class='center'><div class='icon center'><i class="fa fa-envelope fa-2x"></i></div></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/arnavthareja/" class='center'><div class='icon center'><i class="fab fa-linkedin fa-2x"></i></div></a>
+                    <a target="_blank" href="https://github.com/arnavthareja/" class='center'><div class='icon center'><i class="fab fa-github fa-2x"></i></div></a>
+                    <a target="_blank" href="mailto:arnav.thareja25@gmail.com" class='center'><div class='icon center'><i class="fas fa-envelope fa-2x"></i></div></a>
                 </div>
             </div>
             <div class='down-arrow center'>
@@ -155,24 +155,35 @@
                 <div class='section-container grid-3'>
                     <div class='project card flex-vertical' data-aos='fade'>
                         <div class='project image-container center'>
+                            <img src='assets/images/angles-logo.png' class='project image'>
+                        </div>
+                        <div class='project title'>
+                            <p class='title-small'>Angles</p>
+                        </div>
+                        <div class='project description'>
+                            <p class='text-small'>A Chrome extension that suggests news articles of opposite bias when a news website is visited. Made with JavaScript, jQuery, and Google Cloud Natural Language.<br><br>Submission to Dubhacks 2020, placed in the top 3 in the Newsprint track.<br><br>See the Devpost submission <a target="_blank" href="https://devpost.com/software/angles-sqdzlt">here</a> and see the source code <a target="_blank" href="https://github.com/abhaybd/angles">here</a>.</p>
+                        </div>
+                    </div>
+                    <div class='project card flex-vertical' data-aos='fade'>
+                        <div class='project image-container center'>
+                            <i class='fas fa-chess fa-8x project image'></i>
+                        </div>
+                        <div class='project title'>
+                            <p class='title-small'>Chess</p>
+                        </div>
+                        <div class='project description'>
+                            <p class='text-small'>A chess game that can be played in the terminal with minimax agents to play against. Minimax agents use alpha-beta pruning alongside a heuristic-based iterative deepening depth first search algorithm and memoization to improve runtime. Written in Java.<br><br>See the source code <a target="_blank" href="https://www.github.com/arnavthareja/chess">here</a>.</p>
+                        </div>
+                    </div>
+                    <div class='project card flex-vertical' data-aos='fade'>
+                        <div class='project image-container center'>
                             <img src='assets/images/yearbook-2020-logo.png' class='project image'>
                         </div>
                         <div class='project title'>
                             <p class='title-small'>Yearbook 2020</p>
                         </div>
                         <div class='project description'>
-                            <p class='text-small'>An online app designed to keep students connected during COVID-19 quarantines. Each student gets a virtual yearbook page that others can sign, and they can sign others' yearbook pages.<br><br>Try it at <a target="_blank" href="https://yearbook-hhs.web.app">https://yearbook-hhs.web.app</a> and see the source code <a target="_blank" href="https://www.github.com/evilpegasus/Yearbook">here</a>.</p>
-                        </div>
-                    </div>
-                    <div class='project card flex-vertical' data-aos='fade'>
-                        <div class='project image-container center'>
-                            <img src='assets/images/table-tennis-logo.PNG' class='project image'>
-                        </div>
-                        <div class='project title'>
-                            <p class='title-small'>Table Tennis Sign-In</p>
-                        </div>
-                        <div class='project description'>
-                            <p class='text-small'>A Java app to enable a quick and paperless sign-in process for Hazen High School's Table Tennis Club. Uses the Google Sheets API to upload sign-in records to the club's Google Sheet for membership tracking and analytics.</p>
+                            <p class='text-small'>A web app designed to keep students connected during COVID-19 quarantines. Each student has a virtual yearbook page that others can sign, and they are able to sign others' yearbook pages. Made with JavaScript, HTML, CSS, and Google Firebase.<br><br>Try it at <a target="_blank" href="https://yearbook-hhs.web.app">https://yearbook-hhs.web.app</a> and see the source code <a target="_blank" href="https://www.github.com/evilpegasus/Yearbook">here</a>.</p>
                         </div>
                     </div>
                     <div class='project card flex-vertical' data-aos='fade'>
@@ -180,7 +191,7 @@
                             <img src='assets/images/spotify-features-all.png' class='project image'>
                         </div>
                         <div class='project title'>
-                            <p class='title-small'>Music Analysis (In Progress)</p>
+                            <p class='title-small'>Music Analysis</p>
                         </div>
                         <div class='project description'>
                             <p class='text-small'>An analysis of samples of popular music in Python. Looked for key features of popular songs and what differentiates them from unpopular music.<br><br>See it <a target='_blank' href='https://github.com/arnavthareja/music-analysis'>here</a>.</p>
@@ -199,7 +210,7 @@
                     </div>
                     <div class='project card flex-vertical' data-aos='fade'>
                         <div class='project image-container center'>
-                            <i class='fa fa-github fa-8x project image'></i>
+                            <i class='fab fa-github fa-8x project image'></i>
                         </div>
                         <div class='project title'>
                             <p class='title-small'>More on GitHub!</p>
@@ -218,7 +229,7 @@
                 <div class='section-container flex-vertical'>
                     <div class='experience card'>
                         <div class='experience description'>
-                            <h2 class='title-small'>Coursework</h2>
+                            <h2 class='title-small'>Completed Coursework</h2>
                             <ul>
                                 <li class='text-small'>Computer Programming I, II (CSE 142, 143)</li>
                                 <li class='text-small'>Foundations of Computing I (CSE 311)</li>
@@ -258,7 +269,7 @@
         </div>
 
         <div class='dark-mode-slider center' onclick='toggleDarkMode()' data-theme='Light Theme'>
-            <div class='dark-mode-thumb center'><i class='fa fa-sun-o'></i></div>
+            <div class='dark-mode-thumb center'><i class='fas fa-sun'></i></div>
         </div>
 
         <footer>
@@ -268,14 +279,10 @@
         <!-- Link scripts -->
         <script src='assets/scripts/index.js'></script>
 
-        <!-- Import Fontawesome icons -->
-        <script src="https://use.fontawesome.com/b3e5314a5d.js"></script>
-
         <!-- Initialize AOS Library -->
         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
         <script>
             AOS.init();
         </script>
-
     </body>
 </html>
