--- a/index.html
+++ b/index.html
@@ -287,11 +287,15 @@
                     <h2 class='title-medium portfolio-title'>Resume</h2>
                 </div>
                 <div class="section-container flex-vertical">
-                    <div class='experience card'>
-                        <h2 class='text-medium'>Click <a target='_blank' href='Resume'>here</a> to open my resume in another tab.</h2>
+                    <div class='resume card'>
+                        <a target='_blank' href='Resume' class="full plain">
+                            <h2 class='text-medium'>Open my resume in another tab</h2>
+                        </a>
                     </div>
-                    <div class='experience card'>
-                        <h2 class='text-medium'>Click <a href='Resume/Arnav-Thareja-Resume.pdf' download='Arnav-Thareja-Resume.pdf'>here</a> to download my resume.</h2>
+                    <div class='resume card'>
+                        <a href='Resume/Arnav-Thareja-Resume.pdf' download='Arnav-Thareja-Resume.pdf' class="full plain">
+                            <h2 class='text-medium'>Download my resume</h2>
+                        </a>
                     </div>
                 </div>
             </div>
