--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
 
         <!-- Import AOS Library for card transitions -->
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
-        <!-- jQuery -->
-        <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
     </head>
     <body>
         <div class='profile'>
@@ -28,7 +25,7 @@
             </div>
             <div class='profile-description'>
                 <h1 class='title-large'>Arnav Thareja</h1>
-                <p class='text-medium'>Hi! I am a student at the University of Washington studying Computer Science in the Paul G. Allen School of Computer Science & Engineering.</p>
+                <p class='text-medium'>Hi! I am a student at the University of Washington studying Computer Science and Mathematics.</p>
                 <div class="icons">
                     <a target="_blank" href="https://www.linkedin.com/in/arnavthareja/" class='center'><div class='icon center'><i class="fab fa-linkedin fa-2x"></i></div></a>
                     <a target="_blank" href="https://github.com/arnavthareja/" class='center'><div class='icon center'><i class="fab fa-github fa-2x"></i></div></a>
@@ -76,6 +73,24 @@
                 <div class='section-container flex-vertical'>
                     <div class='experience card flex-horizontal' data-aos='fade'>
                         <div class='experience image-container center'>
+                            <img src='assets/images/oracle-logo.png' class='experience image background'>
+                        </div>
+                        <div class='experience content flex-vertical'>
+                            <div class='experience title flex-vertical'>
+                                <p class='title-small'>Software Engineer Intern</p>
+                                <p class='title-xs'>Oracle Cloud Infrastructure (June 2022 - September 2022)</p>
+                            </div>
+                            <div class='experience description'>
+                                <ul>
+                                    <li class='text-small'>Working on the Virtual Machines Efficiency team within Oracle Cloud Infrastructure (OCI) Compute</li>
+                                    <li class='text-small'>Designing and building a system to monitor usage of reserved compute resources and identify resources to be reclaimed</li>
+                                    <li class='text-small'>Creating internal usage metrics, dashboards, and alarms using Java and Oracle Monitoring Query Language (MQL)</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class='experience card flex-horizontal' data-aos='fade'>
+                        <div class='experience image-container center'>
                             <img src='assets/images/prl-logo.jpg' class='experience image background'>
                         </div>
                         <div class='experience content flex-vertical'>
@@ -87,6 +102,7 @@
                                 <ul>
                                     <li class='text-small'>Working on multi-agent autonomous navigation and task allocation with <a target="_blank" href="https://mushr.io/" class="plain">MuSHR cars</a></li>
                                     <li class='text-small'>Designed and implemented algorithms for non-holonomic multi-agent navigation with optimal task allocation in C++</li>
+                                    <li class='text-small'>Extended existing control algorithms to the multi-agent domain to eliminate agent collisions and improve robustness</li>
                                     <li class='text-small'>Built ROS (Robot Operating System) wrappers around algorithms to enable easy interfacing with existing systems</li>
                                     <li class='text-small'>Sped up robot trajectory comparison framework by 50x by directly analyzing ROS bags through the rosbag Python API</li>
                                     <li class='text-small'>Demonstrated and tested system capabilities and translation to real-world environments on physical robots</li>
@@ -101,7 +117,7 @@
                         <div class='experience content flex-vertical'>
                             <div class='experience title flex-vertical'>
                                 <p class='title-small'>Software Engineer, Autonomous Navigation Subteam</p>
-                                <p class='title-xs'>Husky Robotics (October 2020 - Present)</p>
+                                <p class='title-xs'>Husky Robotics (October 2020 - October 2021)</p>
                             </div>
                             <div class='experience description'>
                                 <ul>
@@ -114,7 +130,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class='experience card flex-horizontal' data-aos='fade'>
+                    <!-- <div class='experience card flex-horizontal' data-aos='fade'>
                         <div class='experience image-container center'>
                             <img src='assets/images/mathnasium-logo.png' class='experience image'>
                         </div>
@@ -166,7 +182,7 @@
                                 </ul>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
@@ -251,17 +267,17 @@
                 <div class='section-container flex-vertical'>
                     <div class='experience card'>
                         <div class='experience description'>
-                            <h2 class='title-small'>Completed Coursework</h2>
+                            <h2 class='title-small'>Selected Coursework</h2>
                             <ul>
-                                <li class='text-small'>Data Structures and Parallelism (CSE 332)</li>
-                                <li class='text-small'>The Hardware/Software Interface (CSE 351)</li>
-                                <li class='text-small'>Foundations of Computing I - Discrete Math (CSE 311)</li>
-                                <li class='text-small'>Foundations of Computing II - Probability and Statistics (CSE 312)</li>
-                                <li class='text-small'>System and Software Tools (CSE 391)</li>
-                                <li class='text-small'>Computer Programming I, II (CSE 142, 143)</li>
-                                <li class='text-small'>Intro to Differential Equations (MATH 307)</li>
-                                <li class='text-small'>Matrix Algebra with Applications (MATH 308)</li>
-                                <li class='text-small'>Calculus I, II, III (MATH 124, 125, 126)</li>
+                                <li class='text-small'>Algorithms (CSE 421)</li>
+                                <li class='text-small'>Machine Learning (CSE 546)</li>
+                                <li class='text-small'>Autonomous Robotics (CSE 478)</li>
+                                <li class='text-small'>Computer Vision (CSE 455)</li>
+                                <li class='text-small'>Databases (CSE 344)</li>
+                                <li class='text-small'>Systems Programming (CSE 333)</li>
+                                <li class='text-small'>Probability (MATH 394/395, CSE 312)</li>
+                                <li class='text-small'>Linear Algebra (MATH 308)</li>
+                                <li class='text-small'>Differential Equations (MATH 307)</li>
                             </ul>
                         </div>
                     </div>
@@ -269,13 +285,10 @@
                         <div class='experience description'>
                             <h2 class='title-small'>Planned Coursework</h2>
                             <ul>
-                                <li class='text-small'>Algorithms (CSE 421)</li>
+                                <li class='text-small'>Deep Learning (CSE 490)</li>
+                                <li class='text-small'>Quantum Computation (CSE 490)</li>
                                 <li class='text-small'>Operating Systems (CSE 451)</li>
                                 <li class='text-small'>Distributed Systems (CSE 452)</li>
-                                <li class='text-small'>Autonomous Robotics (CSE 478)</li>
-                                <li class='text-small'>Computer Vision (CSE 455)</li>
-                                <li class='text-small'>Databases (CSE 344)</li>
-                                <li class='text-small'>Systems Programming (CSE 333)</li>
                             </ul>
                         </div>
                     </div>
