--- a/index.html
+++ b/index.html
@@ -14,12 +14,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
-
-        <!-- Import AOS Library for card transitions -->
-        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
-        <!-- jQuery -->
-        <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
     </head>
     <body>
         <div class='profile'>
@@ -28,7 +22,7 @@
             </div>
             <div class='profile-description'>
                 <h1 class='title-large'>Arnav Thareja</h1>
-                <p class='text-medium'>Hi! I am a student at the University of Washington studying Computer Science in the Paul G. Allen School of Computer Science & Engineering.</p>
+                <p class='text-medium'>Hi! I am a student at the University of Washington studying Computer Science and Mathematics.</p>
                 <div class="icons">
                     <a target="_blank" href="https://www.linkedin.com/in/arnavthareja/" class='center'><div class='icon center'><i class="fab fa-linkedin fa-2x"></i></div></a>
                     <a target="_blank" href="https://github.com/arnavthareja/" class='center'><div class='icon center'><i class="fab fa-github fa-2x"></i></div></a>
@@ -75,9 +69,6 @@
                 </div>
                 <div class='section-container flex-vertical'>
                     <div class='experience card flex-horizontal' data-aos='fade'>
-                        <div class='experience image-container center'>
-                            <img src='assets/images/prl-logo.jpg' class='experience image background'>
-                        </div>
                         <div class='experience content flex-vertical'>
                             <div class='experience title flex-vertical'>
                                 <p class='title-small'>Undergraduate Researcher</p>
@@ -93,15 +84,15 @@
                                 </ul>
                             </div>
                         </div>
+                        <div class='experience image-container' id='prl-logo'>
+                            <img src='assets/images/prl-logo.jpg' class='experience image background'>
+                        </div>
                     </div>
                     <div class='experience card flex-horizontal' data-aos='fade'>
-                        <div class='experience image-container center'>
-                            <img src='assets/images/husky-robotics-logo.png' class='experience image background'>
-                        </div>
                         <div class='experience content flex-vertical'>
                             <div class='experience title flex-vertical'>
                                 <p class='title-small'>Software Engineer, Autonomous Navigation Subteam</p>
-                                <p class='title-xs'>Husky Robotics (October 2020 - Present)</p>
+                                <p class='title-xs'>Husky Robotics (October 2020 - October 2021)</p>
                             </div>
                             <div class='experience description'>
                                 <ul>
@@ -113,11 +104,11 @@
                                 </ul>
                             </div>
                         </div>
+                        <div class='experience image-container'>
+                            <img src='assets/images/husky-robotics-logo.png' class='experience image background'>
+                        </div>
                     </div>
                     <div class='experience card flex-horizontal' data-aos='fade'>
-                        <div class='experience image-container center'>
-                            <img src='assets/images/mathnasium-logo.png' class='experience image'>
-                        </div>
                         <div class='experience content flex-vertical'>
                             <div class='experience title flex-vertical'>
                                 <p class='title-small'>Math Instructor</p>
@@ -130,41 +121,8 @@
                                 </ul>
                             </div>
                         </div>
-                    </div>
-                    <div class='experience card flex-horizontal' data-aos='fade'>
-                        <div class='experience image-container center'>
-                            <img src='assets/images/scarabs-logo.jpg' class='experience image'>
-                        </div>
-                        <div class='experience content flex-vertical'>
-                            <div class='experience title flex-vertical'>
-                                <p class='title-small'>Project Manager</p>
-                                <p class='title-xs'>First Tech Challenge Team 8693: The Scarabs (August 2016 - Jun 2020)</p>
-                            </div>
-                            <div class='experience description'>
-                                <ul>
-                                    <li class='text-small'>Led and mentored a team of over 20 members to successful completion of a competition robot and accompanying software</li>
-                                    <li class='text-small'>Implemented a TensorFlow-based object detection model in Java to be integrated with robot navigation algorithms</li>
-                                    <li class='text-small'>Planned and led public events to introduce elementary and middle schoolers in Renton to STEM</li>
-                                    <li class='text-small'>Increased team efficiency and optimized the development process</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class='experience card flex-horizontal' data-aos='fade'>
-                        <div class='experience image-container center'>
-                            <img src='assets/images/museum-of-flight-logo.png' class='experience image'>
-                        </div>
-                        <div class='experience content flex-vertical'>
-                            <div class='experience title flex-vertical'>
-                                <p class='title-small'>Junior Docent</p>
-                                <p class='title-xs'>Museum of Flight (September 2016 - December 2018)</p>
-                            </div>
-                            <div class='experience description'>
-                                <ul>
-                                    <li class='text-small'>Gave presentations on aviation history to Museum of Flight visitors as the Museum's first Junior Docent</li>
-                                    <li class='text-small'>Made interactive exhibits designed to teach young kids about topics in aviation</li>
-                                </ul>
-                            </div>
+                        <div class='experience image-container'>
+                            <img src='assets/images/mathnasium-logo.png' class='experience image'>
                         </div>
                     </div>
                 </div>
@@ -210,28 +168,6 @@
                     </div>
                     <div class='project card flex-vertical' data-aos='fade'>
                         <div class='project image-container center'>
-                            <img src='assets/images/spotify-features-all.png' class='project image'>
-                        </div>
-                        <div class='project title'>
-                            <p class='title-small'>Music Analysis</p>
-                        </div>
-                        <div class='project description'>
-                            <p class='text-small'>An analysis of samples of popular music in Python. Looked for key features of popular songs and what differentiates them from unpopular music.<br><br>See it <a target='_blank' href='https://github.com/arnavthareja/music-analysis'>here</a>.</p>
-                        </div>
-                    </div>
-                    <div class='project card flex-vertical' data-aos='fade'>
-                        <div class='project image-container center'>
-                            <img src='assets/images/personal-website.jpg' class='project image'>
-                        </div>
-                        <div class='project title'>
-                            <p class='title-small'>Personal Website</p>
-                        </div>
-                        <div class='project description'>
-                            <p class='text-small'>This website. Written in HTML, SCSS, and JavaScript.<br><br>See the source code <a target='_blank' href='https://github.com/arnavthareja/arnavthareja.github.io'>here</a>.</p>
-                        </div>
-                    </div>
-                    <div class='project card flex-vertical' data-aos='fade'>
-                        <div class='project image-container center'>
                             <i class='fab fa-github fa-8x project image'></i>
                         </div>
                         <div class='project title'>
@@ -239,44 +175,6 @@
                         </div>
                         <div class='project description'>
                             <p class='text-small'>See more of my projects on my GitHub!<br><br><a target='_blank' href='https://github.com/arnavthareja'>https://github.com/arnavthareja</a></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div id='coursework'>
-                <div class='title-container center'>
-                    <h2 class='title-medium portfolio-title'>Coursework</h2>
-                </div>
-                <div class='section-container flex-vertical'>
-                    <div class='experience card'>
-                        <div class='experience description'>
-                            <h2 class='title-small'>Completed Coursework</h2>
-                            <ul>
-                                <li class='text-small'>Data Structures and Parallelism (CSE 332)</li>
-                                <li class='text-small'>The Hardware/Software Interface (CSE 351)</li>
-                                <li class='text-small'>Foundations of Computing I - Discrete Math (CSE 311)</li>
-                                <li class='text-small'>Foundations of Computing II - Probability and Statistics (CSE 312)</li>
-                                <li class='text-small'>System and Software Tools (CSE 391)</li>
-                                <li class='text-small'>Computer Programming I, II (CSE 142, 143)</li>
-                                <li class='text-small'>Intro to Differential Equations (MATH 307)</li>
-                                <li class='text-small'>Matrix Algebra with Applications (MATH 308)</li>
-                                <li class='text-small'>Calculus I, II, III (MATH 124, 125, 126)</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class='experience card'>
-                        <div class='experience description'>
-                            <h2 class='title-small'>Planned Coursework</h2>
-                            <ul>
-                                <li class='text-small'>Algorithms (CSE 421)</li>
-                                <li class='text-small'>Operating Systems (CSE 451)</li>
-                                <li class='text-small'>Distributed Systems (CSE 452)</li>
-                                <li class='text-small'>Autonomous Robotics (CSE 478)</li>
-                                <li class='text-small'>Computer Vision (CSE 455)</li>
-                                <li class='text-small'>Databases (CSE 344)</li>
-                                <li class='text-small'>Systems Programming (CSE 333)</li>
-                            </ul>
                         </div>
                     </div>
                 </div>
@@ -301,21 +199,11 @@
             </div>
         </div>
 
-        <div class='dark-mode-slider center' onclick='toggleDarkMode()' data-theme='Light Theme'>
-            <div class='dark-mode-thumb center'><i class='fas fa-sun'></i></div>
-        </div>
-
         <footer>
             <p class='text-small'>&copy; 2021 Arnav Thareja</p>
         </footer>
 
         <!-- Link scripts -->
         <script src='assets/scripts/index.js'></script>
-
-        <!-- Initialize AOS Library -->
-        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-        <script>
-            AOS.init();
-        </script>
     </body>
 </html>
