--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <h2 class='title-medium portfolio-title'>Experience</h2>
                 </div>
                 <div class='section-container flex-vertical'>
-                    <div class='experience card flex-horizontal' data-aos='fade'>
+                    <div class='experience card flex-horizontal'>
                         <div class='experience content flex-vertical'>
                             <div class='experience title flex-vertical'>
                                 <p class='title-small'>Software Engineer Intern</p>
@@ -86,10 +86,10 @@
                             </div>
                         </div>
                         <div class='experience image-container'>
-                            <img src='assets/images/oracle-logo.png' class='experience image background'>
+                            <img src='assets/images/oracle-logo.png' class='experience image background small-border'>
                         </div>
                     </div>
-                    <div class='experience card flex-horizontal' data-aos='fade'>
+                    <div class='experience card flex-horizontal'>
                         <div class='experience content flex-vertical'>
                             <div class='experience title flex-vertical'>
                                 <p class='title-small'>Undergraduate Researcher</p>
@@ -106,11 +106,11 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class='experience image-container' id='prl-logo'>
+                        <div class='experience image-container'>
                             <img src='assets/images/prl-logo.jpg' class='experience image background'>
                         </div>
                     </div>
-                    <div class='experience card flex-horizontal' data-aos='fade'>
+                    <div class='experience card flex-horizontal'>
                         <div class='experience content flex-vertical'>
                             <div class='experience title flex-vertical'>
                                 <p class='title-small'>Software Engineer, Autonomous Navigation Subteam</p>
@@ -130,26 +130,6 @@
                             <img src='assets/images/husky-robotics-logo.png' class='experience image background'>
                         </div>
                     </div>
-                    <!-- <div class='experience card flex-horizontal' data-aos='fade'>
-                        <div class='experience image-container center'>
-                            <img src='assets/images/mathnasium-logo.png' class='experience image'>
-                        </div>
-                        <div class='experience content flex-vertical'>
-                            <div class='experience title flex-vertical'>
-                                <p class='title-small'>Math Instructor</p>
-                                <p class='title-xs'>Mathnasium (May 2019 - June 2020)</p>
-                            </div>
-                            <div class='experience description'>
-                                <ul>
-                                    <li class='text-small'>Taught K-12 students topics in math up to calculus and helped develop an intuitive understanding of math concepts</li>
-                                    <li class='text-small'>Contributed to smooth operation of the center and interacted with parents and prospective customers</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class='experience image-container'>
-                            <img src='assets/images/mathnasium-logo.png' class='experience image'>
-                        </div>
-                    </div> -->
                 </div>
             </div>
 
@@ -158,7 +138,7 @@
                     <h2 class='title-medium portfolio-title'>Projects</h2>
                 </div>
                 <div class='section-container grid-3'>
-                    <div class='project card flex-vertical' data-aos='fade'>
+                    <div class='project card flex-vertical'>
                         <div class='project image-container center'>
                             <i class='fas fa-chess fa-8x project image'></i>
                         </div>
@@ -169,7 +149,7 @@
                             <p class='text-small'>A chess game that can be played in the terminal with minimax agents to play against. Minimax agents use alpha-beta pruning alongside a heuristic-based iterative deepening depth first search algorithm and memoization to improve runtime. Written in Java.<br><br>See the source code <a target="_blank" href="https://www.github.com/arnavthareja/chess">here</a>.</p>
                         </div>
                     </div>
-                    <div class='project card flex-vertical' data-aos='fade'>
+                    <div class='project card flex-vertical'>
                         <div class='project image-container center'>
                             <img src='assets/images/angles-logo.png' class='project image'>
                         </div>
@@ -180,7 +160,7 @@
                             <p class='text-small'>A Chrome extension that suggests news articles of opposite bias when a news website is visited. Made with JavaScript, jQuery, and Google Cloud Natural Language.<br><br>Submission to Dubhacks 2020, placed in the top 3 in the Newsprint track.<br><br>See the Devpost submission <a target="_blank" href="https://devpost.com/software/angles-sqdzlt">here</a> and see the source code <a target="_blank" href="https://github.com/abhaybd/angles">here</a>.</p>
                         </div>
                     </div>
-                    <div class='project card flex-vertical' data-aos='fade'>
+                    <div class='project card flex-vertical'>
                         <div class='project image-container center'>
                             <img src='assets/images/yearbook-2020-logo.png' class='project image'>
                         </div>
@@ -191,7 +171,7 @@
                             <p class='text-small'>A web app designed to keep students connected during COVID-19 quarantines. Each student has a virtual yearbook page that others can sign, and they are able to sign others' yearbook pages. Made with JavaScript, HTML, CSS, and Google Firebase.<br><br>Try it at <a target="_blank" href="https://yearbook-hhs.web.app">https://yearbook-hhs.web.app</a> and see the source code <a target="_blank" href="https://www.github.com/evilpegasus/Yearbook">here</a>.</p>
                         </div>
                     </div>
-                    <div class='project card flex-vertical' data-aos='fade'>
+                    <div class='project card flex-vertical'>
                         <div class='project image-container center'>
                             <i class='fab fa-github fa-8x project image'></i>
                         </div>
@@ -209,7 +189,7 @@
                 <div class='title-container center'>
                     <h2 class='title-medium portfolio-title'>Coursework</h2>
                 </div>
-                <div class='section-container flex-vertical'>
+                <div class='section-container flex-horizontal align-start'>
                     <div class='experience card'>
                         <div class='experience description'>
                             <h2 class='title-small'>Selected Coursework</h2>
@@ -221,8 +201,6 @@
                                 <li class='text-small'>Databases (CSE 344)</li>
                                 <li class='text-small'>Systems Programming (CSE 333)</li>
                                 <li class='text-small'>Probability (MATH 394/395, CSE 312)</li>
-                                <li class='text-small'>Linear Algebra (MATH 308)</li>
-                                <li class='text-small'>Differential Equations (MATH 307)</li>
                             </ul>
                         </div>
                     </div>
@@ -247,12 +225,12 @@
                 <div class="section-container flex-vertical">
                     <div class='resume card'>
                         <a target='_blank' href='Resume' class="full plain">
-                            <h2 class='text-medium'>Open my resume in another tab</h2>
+                            <h2 class='text-medium'><i class="fas fa-external-link-alt fa-1x"></i> Open my resume in another tab</h2>
                         </a>
                     </div>
                     <div class='resume card'>
                         <a href='Resume/Arnav-Thareja-Resume.pdf' download='Arnav-Thareja-Resume.pdf' class="full plain">
-                            <h2 class='text-medium'>Download my resume</h2>
+                            <h2 class='text-medium'><i class="fas fa-download fa-1x"></i> Download my resume</h2>
                         </a>
                     </div>
                 </div>
@@ -260,10 +238,16 @@
         </div>
 
         <footer>
-            <p class='text-small'>&copy; 2021 Arnav Thareja</p>
+            <p class='text-small'>&copy; 2022 Arnav Thareja</p>
         </footer>
 
         <!-- Link scripts -->
         <script src='assets/scripts/index.js'></script>
+
+        <!-- Initialize AOS Library -->
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
     </body>
 </html>
